// Vitest Snapshot v1

exports[`vue/NestedFields > renders correctly - array 1`] = `
<div
  class="ui-nested-fields  array"
>
  <span
    class="ui-nested-fields__label"
  >
    Test
  </span>
  <div
    class="ui-nested-fields__add"
  >
    <div
      modifiers=" "
      type="button"
    >
      {}
    </div>
  </div>
  <span
    class="ui-nested-fields__helper"
  >
    Helper
  </span>
</div>
`;

exports[`vue/NestedFields > renders correctly - array with maxItems 1`] = `
<div
  class="ui-nested-fields  array"
>
  <div
    class="ui-nested-fields__add"
  />
</div>
`;

exports[`vue/NestedFields > renders correctly - array with maxItems 2`] = `
<div
  class="ui-nested-fields  array"
>
  <div
    class="ui-nested-fields__add"
  />
</div>
`;

exports[`vue/NestedFields > renders correctly - array with minItems 1`] = `
<div
  class="ui-nested-fields  array"
>
  <div
    class="ui-nested-fields__add"
  >
    <div
      modifiers=" "
      type="button"
    >
      {}
    </div>
  </div>
</div>
`;

exports[`vue/NestedFields > renders correctly - array with minItems 2`] = `
<div
  class="ui-nested-fields  array"
>
  <div
    class="ui-nested-fields__add"
  >
    <div
      modifiers=" "
      type="button"
    >
      {}
    </div>
  </div>
</div>
`;

exports[`vue/NestedFields > renders correctly - dynamicObject with error 1`] = `
<div
  class="ui-nested-fields error dynamicObject"
>
  <div
    class="ui-nested-fields__add"
  >
    <div
      debounce-timeout="100"
      name="undefined-add"
      readonly=""
      value=""
    >
      {}
    </div>
    <div
      modifiers="disabled "
      type="button"
    >
      {}
    </div>
  </div>
  <span
    class="ui-nested-fields__helper"
  >
    Error
  </span>
</div>
`;

exports[`vue/NestedFields > renders correctly - dynamicObject with invalid pattern 1`] = `
<div
  class="ui-nested-fields  dynamicObject"
>
  <div
    class="ui-nested-fields__add"
  >
    <div
      debounce-timeout="10"
      name="undefined-add"
      readonly=""
      value=""
    >
      {}
    </div>
    <div
      modifiers="disabled "
      type="button"
    >
      {}
    </div>
  </div>
</div>
`;

exports[`vue/NestedFields > renders correctly - dynamicObject with valid pattern 1`] = `
<div
  class="ui-nested-fields  dynamicObject"
>
  <div
    class="ui-nested-fields__add"
  >
    <div
      debounce-timeout="10"
      name="undefined-add"
      readonly=""
      value=""
    >
      {}
    </div>
    <div
      modifiers="disabled "
      type="button"
    >
      {}
    </div>
  </div>
</div>
`;

exports[`vue/NestedFields > renders correctly - object 1`] = `
<div
  class="ui-nested-fields  object"
/>
`;
